Issue: When artifacts are moved/copied from one artifact type to another type, it is not checked whether the 'required' attributes in the destination type are supplied with a value.
Changes :
*src/java/org/tigris/scarab/om/Issue.java
 #getUnsetRequiredAttrs(): New method implemented to list required attributes in destination module / issue type that are not supplied with a
value when an artifact was moved/copied.

*src/i18n/ScarabBundle_en_US.properties
 IssueCannotBeCopied: New L10N resource added to alert the user that issues cannot be moved/copied since some of the "required" attributes
in the destination module / issue type have not been supplied with a value.
 AttributesThatReqdInDestinationIssueType: New L10N resource added to display value in the tab in "Copy artifact. Step 2: map attributes" page.

*src/templates/screens/MoveIssue2.vm
 A new tab added to display attributes that require a value in destination artifact type and suppressed the move and copy buttons.

Issue : PCN21997
Committed by : arun@collab.net
Reviewed by  : elicia@collab.net

--- a/src/templates/screens/MoveIssue2.vm
+++ b/src/templates/screens/MoveIssue2.vm
@@ -20,6 +20,7 @@
 #set ($issue = $scarabR.getIssue($data.Parameters.getString("issue_ids")))
 #set ($module = $issue.Module)
 #set ($issueType = $issue.IssueType)
+#set ($unsetReqdAttrs = $issue.getUnsetRequiredAttrs("$newModuleId", "$newIssueTypeId"))
 #set ($isSingleIssueOp = $scarabG.sizeOfArray($issueList) == 1)
 
 #if ($isSingleIssueOp)
@@ -39,6 +40,9 @@
  #set ($actionText = "copy")
  #set ($booleanAction = false)
 #end
+#if (!$unsetReqdAttrs.isEmpty())
+  <p class="warningmark"><strong>$l10n.format("IssueCannotBeCopied", $l10n.Issue, $l10n.Module, $l10n.IssueType.toLowerCase())</strong></p>
+#end
 
 <form method="post" action="$link.setPage("MoveIssue2.vm")">
 <input type="hidden" name="action" value="MoveIssue" />
@@ -54,10 +58,12 @@
 <input type="hidden" name="$moveIssueGroup.Action.key" value="$selectAction" />
 
 <div class="functnbar">
-#if ($booleanAction)
+#if ($unsetReqdAttrs.isEmpty())
+ #if ($booleanAction)
   <input type="submit" value="$l10n.MoveIssue" name="eventSubmit_doSaveissue" />&#160;
-#else
+ #else
   <input type="submit" value="$l10n.CopyIssue" name="eventSubmit_doSaveissue" />&#160;
+ #end
 #end
   <input type="submit" value="$l10n.Cancel" name="eventSubmit_doBacktoone" />
 </div>
@@ -71,6 +77,28 @@
 </tr>
 </table>
 </div>
+
+#if (!$unsetReqdAttrs.isEmpty())
+<h3>$l10n.format("AttributesThatReqdInDestinationIssueType", $l10n.Module, $l10n.IssueType.toLowerCase())</h3>
+<table width="100%" border="1" cellspacing="2" cellpadding="3">
+<tr>
+<th>$l10n.Attribute</th>
+<th>$l10n.InputType</th>
+#foreach ($attr in $unsetReqdAttrs)
+  #indexedRows($velocityCount)
+  <td>
+     $attr.Name
+     #set ($displayValue = "")
+     #set ($displayValue = $newModule.getRModuleAttribute($attr, $newIssueType).getDisplayValue())
+     #if ($displayValue.length() > 0 && !$attr.Name.equals($displayValue))
+      ($displayValue)
+     #end
+  </td>
+<td>$attr.AttributeType.Name</td>
+</tr>
+#end
+</table>
+#else
 
 #if (!$matchingAttributes.isEmpty())
 <h3>$l10n.AttributesToBeCopied</h3>
@@ -150,12 +178,14 @@
 </tr>
 </table>
 </div>
-
+#end
 <div class="functnbar2">
-#if ($booleanAction)
+#if ($unsetReqdAttrs.isEmpty())
+ #if ($booleanAction)
   <input type="submit" value="$l10n.MoveIssue" name="eventSubmit_doSaveissue" />&#160;
-#else
+ #else
   <input type="submit" value="$l10n.CopyIssue" name="eventSubmit_doSaveissue" />&#160;
+ #end
 #end
   <input type="submit" value="$l10n.Cancel" name="eventSubmit_doBacktoone" />
 </div>
