Issue: The attribute options of default "Attribute" field were not populated in the "State change query" field in the "State change query" header in "Advanced query" page if the issue type does not have "Status" attribute.
Changes:
*src/java/org/tigris/scarab/util/word/IssueSearch.java-
 #getStateChangeAttributeId(): Condition removed in order to return actual value of stateChangeAttributeId instead of returning "Status"
 attribute id when the stateChangeAttributeId is null.

*src/templates/macros/AdvancedQueryMacro.vm-
 Conditions added in order to get the attribute options of default "Attribute" since the "$searchGroup.StateChangeAttributeId.Value" returns
 null by default.

Issue: PCN17335
Committed by : arun@collab.net
Reviewed by  : elicia@collab.net

--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -181,16 +181,19 @@ $l10n.From:&#160;<input type="text" size="20"
  <th width="120">$l10n.Attribute</th>
  <td>
      <select name="$searchGroup.StateChangeAttributeId.Key">
+     #set ( $selected = false )
 #foreach ( $attKey in $attrValues.sequence() )
     #set ( $attVal = $attrValues.get($attKey) )
     #if ($attVal.Attribute.isOptionAttribute())
         #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) )
-        #set ( $selected = false )
-        #if ($searchGroup.StateChangeAttributeId.Value == $attVal.AttributeId )
+        #if (!$selected || $searchGroup.StateChangeAttributeId.Value == $attVal.AttributeId )
             #set ( $selected = true )
             #set ( $selectedAttribute = $attVal.Attribute )
-        #end
     <option#selected($selected) value="$attVal.AttributeId">
+        #else
+            <option value="$attVal.AttributeId">
+        #end
+    
  #if ($attVal.Issue.Module && $attVal.Issue.IssueType)
         $attVal.RModuleAttribute.DisplayValue
  #else
