Issue : Hidden attribute options are displayed while creating new issue using templates and existing templates. Changes: *src/templates/macros/GlobalMacros.vm-  Checks whether the issue is template or not for existing templates. If yes,  "root" attribute option is passed as second parameter for  SCWorkflow.canMakeTransition() method in order to hide the hidden attribute options otherwise current attribute option value is passed.
Issue : PCN21672
Committed by : arun@collab.net
Reviewed by  : elicia@collab.net

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -33,7 +33,11 @@
          #else
            #set ($values = $newValues)
          #end
-         #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption($values), $option.getAttributeOption(), $issue))
+         #if ($issue.isTemplate())
+           #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption("0"), $option.getAttributeOption(), $issue))
+         #else
+           #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption($values), $option.getAttributeOption(), $issue))
+         #end 
          #if ($newValues.equals($option.OptionId))
            #set ($selected=true)
           #end
@@ -71,9 +75,13 @@
     #if ($currentValue && $option.OptionId == $currentValue)
          #set ($selected = true)
     #end
+    #set ($canMakeTransition = true)
+    #set ($canMakeTransition = $scarabG.Workflow.canMakeTransition($data.User, $scarabR.getAttributeOption("0"), $option.getAttributeOption(), $issue))
+    #if ($canMakeTransition)
     <option value="$option.OptionId"#selected($selected)>
     #foreach ($i in [0..$option.Level])#if($i != 0)&nbsp;&nbsp;&nbsp;&nbsp;#end#end
           $option.DisplayValue</option>
+    #end
   #end
 </select>
 #end
