Issue : The sorted order of the issues in the Issue list doesn't reflect in the exported format; issues always get listed in the ascending order of Issue IDs.
Changes:
*src/templates/screens/IssueList.vm
Hidden form elements added for 'sortColumn' and 'sortPolarity' in order to
consider them while exporting the issues.

Issue : PCN19269
Committed by : arun@collab.net
Reviewed by  : elicia@collab.net

--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -73,6 +73,8 @@ $link.setPage('ConfigureIssueList.vm').setLabel($l10n.AddRemoreAttributesFromVie
 #set ($searchGroup = $intake.SearchIssue.mapTo($search))
 #set ($sortColumn = $searchGroup.get("SortAttributeId").Value.toString())
 #set ($sortPolarity = $searchGroup.get("SortPolarity").Value)
+<input type="hidden" name="sortColumn" value="$sortColumn" />
+<input type="hidden" name="sortPolarity" value="$sortPolarity" />
 
 ## PAGINATION
 #if ($paginated)
