Added ApacheCon 2003 logo to web site. Improved styling for taglib and task list tables.

--- a/doc/struts.css
+++ b/doc/struts.css
@@ -134,6 +134,13 @@ th.attribute {
 
 thead {
 	border: 2px solid #CCCCCC;
+	background: #DDDDDD;
+	color: #333333;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+tr.evenRow {
+	background: #F6F6F6;
 }
 
 .center {
